bugfix evaluation steps

--- a/scar.ipynb
+++ b/scar.ipynb
@@ -116,8 +116,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BATCH_SIZE = 2\n",
-    "N_SPLITS = 5\n",
     "USE_TEST_SET = True\n",
     "USE_PATTERN_EMBEDDING = True\n",
     "\n",
@@ -129,16 +127,13 @@
     "\t#'uses_data_from', \n",
     "\t#'uses_method_in',\n",
     "]\n",
-    "OVERSAMPLE = False\n",
-    "UNDERSAMPLE = False\n",
     "\n",
     "TRAIN_EPOCHS = None\n",
-    "EVALUATION_SECONDS = 5\n",
     "MAX_STEPS = (10**4)*2\n",
     "EVALUATION_STEPS = MAX_STEPS/10\n",
     "MODEL_DIR = './model'\n",
     "TF_MODEL = 'USE_MLQA'\n",
-    "MODEL_MANAGER = RolePatternExtractor({'tf_model':TF_MODEL})"
+    "MODEL_MANAGER = None"
    ]
   },
   {
@@ -183,6 +178,8 @@
     "\tdf['anchorsent'] = df['anchorsent'].map(lambda x: re.sub(r'[^\\x00-\\x7F]+',' ',x))\n",
     "\n",
     "\tif USE_PATTERN_EMBEDDING:\n",
+    "\t\tif MODEL_MANAGER is None:\n",
+    "\t\t\tMODEL_MANAGER = RolePatternExtractor({'tf_model':TF_MODEL})\n",
     "\t\textra_list = []\n",
     "\t\tfor text in df['anchorsent'].values:\n",
     "\t\t\textra = list(Counter(pattern['predicate'] for pattern in MODEL_MANAGER.get_role_pattern_list(text)).keys())\n",
@@ -241,6 +238,8 @@
     "\t\t\twith open(cache_file, 'rb') as f:\n",
     "\t\t\t\tembedded_sentences = pickle.load(f)\n",
     "\t\telse:\n",
+    "\t\t\tif MODEL_MANAGER is None:\n",
+    "\t\t\t\tMODEL_MANAGER = RolePatternExtractor({'tf_model':TF_MODEL})\n",
     "\t\t\tdf['anchorsent'] = list(df['anchorsent'])\n",
     "\t\t\tembedded_sentences = MODEL_MANAGER.embed(df['anchorsent'])\n",
     "\t\t\twith open(cache_file, 'wb') as f:\n",
@@ -604,7 +603,7 @@
     "\t)\n",
     "\n",
     "\ttrain_spec = tf.estimator.TrainSpec(input_fn=train_input_fn, max_steps=max_steps)\n",
-    "\teval_spec = tf.estimator.EvalSpec(input_fn=test_input_fn, throttle_secs=EVALUATION_SECONDS)\n",
+    "\teval_spec = tf.estimator.EvalSpec(input_fn=test_input_fn, steps=EVALUATION_STEPS, throttle_secs=0)\n",
     "\n",
     "\ttf.estimator.train_and_evaluate(estimator, train_spec, eval_spec)"
    ]
@@ -752,7 +751,7 @@
     "\n",
     "\tdef cross_validate_model(config, reporter):\n",
     "\t\tsummary_results_list = []\n",
-    "\t\tcross_validation = KFold(n_splits=3, shuffle=True, random_state=1)\n",
+    "\t\tcross_validation = KFold(n_splits=config[\"N_SPLITS\"], shuffle=True, random_state=1)\n",
     "\t\tfor e, (train_index, test_index) in enumerate(cross_validation.split(datalist)):\n",
     "\t\t\tprint(f'-------- Fold {e} --------')\n",
     "\t\t\tprint(f'Train-set {e} indexes {train_index}')\n",
@@ -775,7 +774,7 @@
     "\t\t\t\ttrainset=trainset, \n",
     "\t\t\t\ttestset=testset, \n",
     "\t\t\t\tnum_epochs=TRAIN_EPOCHS, \n",
-    "\t\t\t\tbatch_size=4, \n",
+    "\t\t\t\tbatch_size=config[\"BATCH_SIZE\"], \n",
     "\t\t\t\tmax_steps=MAX_STEPS, \n",
     "\t\t\t\tmodel_dir=model_dir, \n",
     "\t\t\t\tfeature_columns=feature_columns, \n",
@@ -812,11 +811,11 @@
     "tune.run(build_cross_validate_model(datalist),\n",
     "    name=\"my_experiment\",\n",
     "    config={ \n",
-    "        #\"N_SPLITS\": tune.grid_search([3, 4, 5, 6]), \n",
-    "        \"OVERSAMPLE\": tune.grid_search([True, False]),\n",
-    "        \"UNDERSAMPLE\": tune.grid_search([True, False]),\n",
-    "        #\"BATCH_SIZE\": tune.grid_search([2, 3, 4, 5, 6]),\n",
-    "        'UNITS': tune.grid_search([4, 8, 16, 32, 64, 128]),\n",
+    "        \"N_SPLITS\": tune.grid_search([3]), \n",
+    "        \"OVERSAMPLE\": tune.grid_search([False]),\n",
+    "        \"UNDERSAMPLE\": tune.grid_search([False]),\n",
+    "        \"BATCH_SIZE\": tune.grid_search([4]),\n",
+    "        'UNITS': tune.grid_search([2, 4, 8, 16, 32]),\n",
     "        'ACTIVATION_FUNCTION': tune.grid_search([tf.nn.tanh, tf.nn.relu, tf.nn.selu, tf.nn.leaky_relu, tf.nn.sigmoid]),\n",
     "        'LEARNING_RATE': tune.grid_search([0.1, 0.03, 0.01, 0.003, 0.001]),\n",
     "        'REGULARIZATION_STRENGTH': tune.grid_search([0.01, 0.003, 0.001, 0.0003]),\n",
