changes to scoring formula

--- a/scar.ipynb
+++ b/scar.ipynb
@@ -143,7 +143,7 @@
    "outputs": [],
    "source": [
     "USE_TEST_SET = False\n",
-    "USE_PATTERN_EMBEDDING = True\n",
+    "USE_PATTERN_EMBEDDING = False\n",
     "\n",
     "ZERO_CLASS = 'none'\n",
     "LABELS_TO_EXCLUDE = [\n",
@@ -156,7 +156,8 @@
     "\n",
     "TRAIN_EPOCHS = None\n",
     "MAX_STEPS = 10**4\n",
-    "EVALUATION_STEPS = MAX_STEPS/15\n",
+    "EVALUATION_PER_TRAINING = 30\n",
+    "EVALUATION_STEPS = MAX_STEPS/EVALUATION_PER_TRAINING\n",
     "MODEL_DIR = './model'\n",
     "TF_MODEL = 'USE_MLQA'\n",
     "MODEL_OPTIONS = {'tf_model':TF_MODEL, 'use_lemma':False}"
@@ -678,7 +679,7 @@
     "\t\t\t\t\tcontinue\n",
     "\t\t\t\tif stat not in best_stat_dict:\n",
     "\t\t\t\t\tbest_stat_dict[stat] = []\n",
-    "\t\t\t\tbest_stat_dict[stat].append(max(value_list))\n",
+    "\t\t\t\tbest_stat_dict[stat].append(np.mean(sorted(value_list, reverse=True)[:3]))\n",
     "\t\tfor stat,best_list in best_stat_dict.items():\n",
     "\t\t\tbest_stat_dict[stat] = {'mean':np.mean(best_list), 'std':np.std(best_list)}\n",
     "\t\treturn best_stat_dict\n",
@@ -718,33 +719,32 @@
     "\t\t\tsummary_results = summary_results[-1]['results']\n",
     "\t\t\tsummary_results_list.append(summary_results)\n",
     "\t\t\tprint(f'Test-set {e} results:', summary_results)\n",
-    "\t\t\tif e > 0:\n",
-    "\t\t\t\tbest_stat_dict = get_best_stat_dict(summary_results_list)\n",
-    "\t\t\t\treporter(\n",
-    "\t\t\t\t\ttimesteps_total=e, \n",
-    "\t\t\t\t\t# F1 scores\n",
-    "\t\t\t\t\tf1_macro_mean=best_stat_dict[\"f1_macro\"][\"mean\"],\n",
-    "\t\t\t\t\tf1_macro_std=best_stat_dict[\"f1_macro\"][\"std\"],\n",
-    "\t\t\t\t\tf1_micro_mean=best_stat_dict[\"f1_micro\"][\"mean\"],\n",
-    "\t\t\t\t\tf1_micro_std=best_stat_dict[\"f1_micro\"][\"std\"],\n",
-    "\t\t\t\t\tf1_weighted_mean=best_stat_dict[\"f1_weighted\"][\"mean\"],\n",
-    "\t\t\t\t\tf1_weighted_std=best_stat_dict[\"f1_weighted\"][\"std\"],\n",
-    "\t\t\t\t\t# Precision scores\n",
-    "\t\t\t\t\tprecision_macro_mean=best_stat_dict[\"precision_macro\"][\"mean\"],\n",
-    "\t\t\t\t\tprecision_macro_std=best_stat_dict[\"precision_macro\"][\"std\"],\n",
-    "\t\t\t\t\tprecision_micro_mean=best_stat_dict[\"precision_micro\"][\"mean\"],\n",
-    "\t\t\t\t\tprecision_micro_std=best_stat_dict[\"precision_micro\"][\"std\"],\n",
-    "\t\t\t\t\tprecision_weighted_mean=best_stat_dict[\"precision_weighted\"][\"mean\"],\n",
-    "\t\t\t\t\tprecision_weighted_std=best_stat_dict[\"precision_weighted\"][\"std\"],\n",
-    "\t\t\t\t\t# Recall scores\n",
-    "\t\t\t\t\trecall_macro_mean=best_stat_dict[\"recall_macro\"][\"mean\"],\n",
-    "\t\t\t\t\trecall_macro_std=best_stat_dict[\"recall_macro\"][\"std\"],\n",
-    "\t\t\t\t\trecall_micro_mean=best_stat_dict[\"recall_micro\"][\"mean\"],\n",
-    "\t\t\t\t\trecall_micro_std=best_stat_dict[\"recall_micro\"][\"std\"],\n",
-    "\t\t\t\t\trecall_weighted_mean=best_stat_dict[\"recall_weighted\"][\"mean\"],\n",
-    "\t\t\t\t\trecall_weighted_std=best_stat_dict[\"recall_weighted\"][\"std\"],\n",
-    "\t\t\t\t)\n",
-    "\t\t\t\tprint(f'Average best statistics at fold {e}: {best_stat_dict}')\n",
+    "\t\t\tbest_stat_dict = get_best_stat_dict(summary_results_list)\n",
+    "\t\t\treporter(\n",
+    "\t\t\t\ttimesteps_total=e, \n",
+    "\t\t\t\t# F1 scores\n",
+    "\t\t\t\tf1_macro_mean=best_stat_dict[\"f1_macro\"][\"mean\"],\n",
+    "\t\t\t\tf1_macro_std=best_stat_dict[\"f1_macro\"][\"std\"],\n",
+    "\t\t\t\tf1_micro_mean=best_stat_dict[\"f1_micro\"][\"mean\"],\n",
+    "\t\t\t\tf1_micro_std=best_stat_dict[\"f1_micro\"][\"std\"],\n",
+    "\t\t\t\tf1_weighted_mean=best_stat_dict[\"f1_weighted\"][\"mean\"],\n",
+    "\t\t\t\tf1_weighted_std=best_stat_dict[\"f1_weighted\"][\"std\"],\n",
+    "\t\t\t\t# Precision scores\n",
+    "\t\t\t\tprecision_macro_mean=best_stat_dict[\"precision_macro\"][\"mean\"],\n",
+    "\t\t\t\tprecision_macro_std=best_stat_dict[\"precision_macro\"][\"std\"],\n",
+    "\t\t\t\tprecision_micro_mean=best_stat_dict[\"precision_micro\"][\"mean\"],\n",
+    "\t\t\t\tprecision_micro_std=best_stat_dict[\"precision_micro\"][\"std\"],\n",
+    "\t\t\t\tprecision_weighted_mean=best_stat_dict[\"precision_weighted\"][\"mean\"],\n",
+    "\t\t\t\tprecision_weighted_std=best_stat_dict[\"precision_weighted\"][\"std\"],\n",
+    "\t\t\t\t# Recall scores\n",
+    "\t\t\t\trecall_macro_mean=best_stat_dict[\"recall_macro\"][\"mean\"],\n",
+    "\t\t\t\trecall_macro_std=best_stat_dict[\"recall_macro\"][\"std\"],\n",
+    "\t\t\t\trecall_micro_mean=best_stat_dict[\"recall_micro\"][\"mean\"],\n",
+    "\t\t\t\trecall_micro_std=best_stat_dict[\"recall_micro\"][\"std\"],\n",
+    "\t\t\t\trecall_weighted_mean=best_stat_dict[\"recall_weighted\"][\"mean\"],\n",
+    "\t\t\t\trecall_weighted_std=best_stat_dict[\"recall_weighted\"][\"std\"],\n",
+    "\t\t\t)\n",
+    "\t\t\tprint(f'Average best statistics at fold {e}: {best_stat_dict}')\n",
     "\treturn cross_validate_model"
    ]
   },
@@ -867,7 +867,7 @@
     "local_dir = os.path.join('.','ray_results')\n",
     "analysis = tune.run( # https://ray.readthedocs.io/en/latest/tune-package-ref.html#ray.tune.run\n",
     "    build_cross_validate_model(datalist),\n",
-    "    num_samples=3, # Number of times to sample from the hyperparameter space. Defaults to 1. If grid_search is provided as an argument, the grid will be repeated num_samples of times.\n",
+    "    num_samples=1, # Number of times to sample from the hyperparameter space. Defaults to 1. If grid_search is provided as an argument, the grid will be repeated num_samples of times.\n",
     "    name=experiment_name,\n",
     "    local_dir=local_dir,\n",
     "    resume=os.path.isdir(os.path.join(local_dir,experiment_name)),\n",
@@ -893,7 +893,7 @@
     "        \"BATCH_SIZE\": tune.grid_search([\n",
     "            #2,\n",
     "            3, \n",
-    "            #4,\n",
+    "            4,\n",
     "        ]),\n",
     "        'UNITS': tune.grid_search([\n",
     "            4, \n",
