changes to linguistic core

--- a/scar.ipynb
+++ b/scar.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,9 +60,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /Users/toor/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to /Users/toor/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "from misc.doc_reader import get_document_list\n",
     "from models.role_pattern_extractor import RolePatternExtractor"
@@ -70,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,9 +110,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import tf_metrics\n",
@@ -122,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,12 +158,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "USE_TEST_SET = False\n",
-    "USE_PATTERN_EMBEDDING = False\n",
+    "USE_PATTERN_EMBEDDING = True\n",
     "\n",
     "ZERO_CLASS = 'none'\n",
     "LABELS_TO_EXCLUDE = [\n",
@@ -172,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,9 +777,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataframe\n",
+      "                                             anchorsent       sectype\n",
+      "0     'In summary, the open nature of the Internet a...  introduction\n",
+      "1     'Finally, a common data transformation method ...          none\n",
+      "3     'Hucaljuk and Rakipovic [15] included an exper...       results\n",
+      "4     'The first step in the modelling process is to...       results\n",
+      "5     'Hucaljuk and Rakipovic [15] used a separate e...       results\n",
+      "...                                                 ...           ...\n",
+      "1552  'To support feature computation and combinatio...          none\n",
+      "1553  'To query the lexical databases we use the ope...          data\n",
+      "1554  'To compute the score, we use a series of feat...          data\n",
+      "1555  'Using the strategy described in Section 3.3, ...          none\n",
+      "1556  'It is computed by comparing all patents in th...          none\n",
+      "\n",
+      "[1376 rows x 2 columns]\n",
+      "Dataframe\n",
+      "                                             anchorsent       sectype\n",
+      "0     'In summary, the open nature of the Internet a...  introduction\n",
+      "1     'Finally, a common data transformation method ...          none\n",
+      "3     'Hucaljuk and Rakipovic [15] included an exper...       results\n",
+      "4     'The first step in the modelling process is to...       results\n",
+      "5     'Hucaljuk and Rakipovic [15] used a separate e...       results\n",
+      "...                                                 ...           ...\n",
+      "1552  'To support feature computation and combinatio...          none\n",
+      "1553  'To query the lexical databases we use the ope...          data\n",
+      "1554  'To compute the score, we use a series of feat...          data\n",
+      "1555  'Using the strategy described in Section 3.3, ...          none\n",
+      "1556  'It is computed by comparing all patents in th...          none\n",
+      "\n",
+      "[1376 rows x 2 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "trainset = get_dataframe('training_all.csv')"
    ]
@@ -773,9 +830,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataframe\n",
+      "                                            anchorsent       sectype\n",
+      "0    'This is common in software design when the UI...  introduction\n",
+      "1    'The most related items intersect first, and t...          none\n",
+      "2    'In this study, participants performed a hiera...          none\n",
+      "3    'Card sorting software, xSort (Arroz, 2008) wa...          none\n",
+      "4    'The concept of using PA to analyze SD evaluat...  introduction\n",
+      "..                                                 ...           ...\n",
+      "295  'Data words are commonly studied in XML litera...          none\n",
+      "296  'It was shown in [7] that the language L={(ad1...          none\n",
+      "297  'Originally they were defined on words over in...          none\n",
+      "298  'What all of these languages (with the sole ex...  introduction\n",
+      "299  'Note that besides the operators in Definition...          none\n",
+      "\n",
+      "[289 rows x 2 columns]\n",
+      "Dataframe\n",
+      "                                            anchorsent       sectype\n",
+      "0    'This is common in software design when the UI...  introduction\n",
+      "1    'The most related items intersect first, and t...          none\n",
+      "2    'In this study, participants performed a hiera...          none\n",
+      "3    'Card sorting software, xSort (Arroz, 2008) wa...          none\n",
+      "4    'The concept of using PA to analyze SD evaluat...  introduction\n",
+      "..                                                 ...           ...\n",
+      "295  'Data words are commonly studied in XML litera...          none\n",
+      "296  'It was shown in [7] that the language L={(ad1...          none\n",
+      "297  'Originally they were defined on words over in...          none\n",
+      "298  'What all of these languages (with the sole ex...  introduction\n",
+      "299  'Note that besides the operators in Definition...          none\n",
+      "\n",
+      "[289 rows x 2 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "testset = get_dataframe('test_groundtruth_all.csv')"
    ]
@@ -791,7 +885,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading spacy model <en_core_web_md>...\n",
+      "Loading spacy model <en_core_web_md>...\n"
+     ]
+    }
+   ],
    "source": [
     "n_classes = encode_dataset({'train':trainset, 'test':testset})"
    ]
