added support to ac_larc dataset

--- a/scar.ipynb
+++ b/scar.ipynb
@@ -131,8 +131,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "USE_TEST_SET = False\n",
+    "USE_SCICITE = True\n",
+    "USE_ACLARC = True\n",
     "USE_PATTERN_EMBEDDING = True\n",
+    "USE_TEST_SET = False\n",
     "\n",
     "ZERO_CLASS = 'none'\n",
     "LABELS_TO_EXCLUDE = [\n",
@@ -150,6 +152,39 @@
     "MODEL_DIR = './model'\n",
     "TF_MODEL = 'USE_MLQA'\n",
     "MODEL_OPTIONS = {'tf_model':TF_MODEL, 'use_lemma':False}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define function for extracting probabilities from scicite models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fuse_with_scicite_model(df, dataset_file, model_name):\n",
+    "\tfilename = dataset_file+'.'+model_name+'.json'\n",
+    "\tprint(f'Reading {filename}..')\n",
+    "\textra_df = pd.read_json(filename)\n",
+    "\textra_df = extra_df[['probabilities','string']]\n",
+    "\tfeature_name = model_name+'_prediction'\n",
+    "\textra_df = extra_df.rename(columns={\n",
+    "\t\t'probabilities': feature_name, \n",
+    "\t\t'string': 'anchorsent',\n",
+    "\t})\n",
+    "\tdf = df.set_index('anchorsent').join(extra_df.set_index('anchorsent'), on='anchorsent')\n",
+    "\tdf = df.reset_index().rename(columns={'index': 'anchorsent'})\n",
+    "\tclass_size = max(map(lambda x: len(x), filter(lambda x: type(x) in [list,tuple,np.array], df[feature_name].to_list())))\n",
+    "\tprint(f'{model_name} has class size {class_size}')\n",
+    "\tdf[feature_name] = df[feature_name].map(lambda x: np.zeros(class_size)+1/class_size if not(type(x) in [list,tuple,np.array] and len(x)== class_size) else x)\n",
+    "\tfor e in df[feature_name].to_list():\n",
+    "\t\tassert(len(e)==class_size)\n",
+    "\treturn df"
    ]
   },
   {
@@ -193,18 +228,12 @@
     "\tdf['anchorsent'] = df['anchorsent'].map(lambda x: re.sub(r\"^'(.*)'$\",r'\\1',x))\n",
     "    \n",
     "\t# Join with scicite output\n",
-    "\tscicite_df = pd.read_json(dataset_file+'.scicite.json')\n",
-    "\tscicite_df = scicite_df[['probabilities','string']]\n",
-    "\tscicite_df = scicite_df.rename(columns={\n",
-    "\t\t'probabilities': 'scicite_prediction', \n",
-    "\t\t'string': 'anchorsent',\n",
-    "\t})\n",
-    "\tdf = df.set_index('anchorsent').join(scicite_df.set_index('anchorsent'), on='anchorsent')\n",
-    "\tdf = df.reset_index().rename(columns={'index': 'anchorsent'})\n",
-    "\tdf['scicite_prediction'] = df['scicite_prediction'].map(lambda x: [1/3,1/3,1/3] if not(type(x) in [list,tuple,np.array] and len(x)== 3) else x)\n",
-    "\t#df = df[df['scicite_prediction'].map(lambda x: type(x) in [list,tuple,np.array] and len(x)== 3)]\n",
-    "\t#for e in df['scicite_prediction'].to_list():\n",
-    "\t#\tassert(len(e)==3)\n",
+    "\tif USE_SCICITE:\n",
+    "\t\tdf = fuse_with_scicite_model(df, dataset_file, 'scicite')\n",
+    "        \n",
+    "\t# Join with ac_larc output\n",
+    "\tif USE_ACLARC:\n",
+    "\t\tdf = fuse_with_scicite_model(df, dataset_file, 'aclarc')\n",
     "\n",
     "\t# Print dataframe\n",
     "\tprint('Dataframe')\n",
@@ -896,7 +925,7 @@
     "local_dir = os.path.join('.','ray_results')\n",
     "analysis = tune.run( # https://ray.readthedocs.io/en/latest/tune-package-ref.html#ray.tune.run\n",
     "    build_cross_validate_model(datalist),\n",
-    "    num_samples=3, # Number of times to sample from the hyperparameter space. Defaults to 1. If grid_search is provided as an argument, the grid will be repeated num_samples of times.\n",
+    "    num_samples=1, # Number of times to sample from the hyperparameter space. Defaults to 1. If grid_search is provided as an argument, the grid will be repeated num_samples of times.\n",
     "    name=experiment_name,\n",
     "    local_dir=local_dir,\n",
     "    resume=os.path.isdir(os.path.join(local_dir,experiment_name)),\n",
@@ -912,7 +941,7 @@
     "            None,\n",
     "            #combine.SMOTEENN, \n",
     "            combine.SMOTETomek, \n",
-    "            over_sampling.RandomOverSampler,\n",
+    "            #over_sampling.RandomOverSampler,\n",
     "            over_sampling.SMOTE,\n",
     "            over_sampling.ADASYN,\n",
     "            #under_sampling.RandomUnderSampler,\n",
@@ -921,20 +950,20 @@
     "        ]),\n",
     "        \"BATCH_SIZE\": tune.grid_search([\n",
     "            2,\n",
-    "            3, \n",
+    "            #3, \n",
     "            4,\n",
     "        ]),\n",
     "        'UNITS': tune.grid_search([\n",
     "            4, \n",
-    "            6, \n",
+    "            #6, \n",
     "            8, \n",
-    "            10,\n",
+    "            #10,\n",
     "            12,\n",
     "        ]),\n",
     "        'ACTIVATION_FUNCTION': tune.grid_search([\n",
-    "            None,\n",
+    "            #None,\n",
     "            tf.nn.relu,\n",
-    "            tf.nn.leaky_relu,\n",
+    "            #tf.nn.leaky_relu,\n",
     "            tf.nn.selu,\n",
     "            tf.nn.tanh,\n",
     "        ]),\n",
