added support to ambliopic training
added support to ambliopic training

--- a/scar.ipynb
+++ b/scar.ipynb
@@ -71,6 +71,7 @@
     "from collections import Counter\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
+    "import json\n",
     "#import random"
    ]
   },
@@ -169,6 +170,8 @@
    "source": [
     "def fuse_with_scicite_model(df, dataset_file, model_name):\n",
     "\tfilename = dataset_file+'.'+model_name+'.json'\n",
+    "\tif not os.path.isfile(filename):\n",
+    "\t\treturn df\n",
     "\tprint(f'Reading {filename}..')\n",
     "\textra_df = pd.read_json(filename)\n",
     "\textra_df = extra_df[['probabilities','string']]\n",
@@ -179,7 +182,7 @@
     "\t})\n",
     "\tdf = df.set_index('anchorsent').join(extra_df.set_index('anchorsent'), on='anchorsent')\n",
     "\tdf = df.reset_index().rename(columns={'index': 'anchorsent'})\n",
-    "\tclass_size = max(map(lambda x: len(x), filter(lambda x: type(x) in [list,tuple,np.array], df[feature_name].to_list())))\n",
+    "\tclass_size = max(map(lambda x: len(x), filter(lambda x: type(x) in [list,tuple,np.array,np.ndarray], df[feature_name].to_list())))\n",
     "\tprint(f'{model_name} has class size {class_size}')\n",
     "\tdf[feature_name] = df[feature_name].map(lambda x: np.zeros(class_size)+1/class_size if not(type(x) in [list,tuple,np.array] and len(x)== class_size) else x)\n",
     "\tfor e in df[feature_name].to_list():\n",
@@ -295,7 +298,7 @@
     "\t\t\tembedded_sentences = MODEL_MANAGER.embed(df['anchorsent'])\n",
     "\t\t\twith open(cache_file, 'wb') as f:\n",
     "\t\t\t\tpickle.dump(dict(zip(df['anchorsent'],embedded_sentences)), f)\n",
-    "\t\tdf['anchorsent'] = embedded_sentences\n",
+    "\t\tdf['anchorsent_embedding'] = embedded_sentences\n",
     "\t\t# Embed extra info\n",
     "\t\tif USE_PATTERN_EMBEDDING:\n",
     "\t\t\tcache_file = f'{TF_MODEL}.{key}.extra.embedding_cache.pkl'\n",
@@ -418,9 +421,10 @@
    "source": [
     "def get_dataframe_feature_shape(df, feature):\n",
     "\tfirst_element = df[feature][0]\n",
+    "\tif type(first_element) not in [np.array,np.ndarray]:\n",
+    "\t\treturn None    \n",
     "\t#print(type(first_element), first_element)\n",
-    "\tshape = first_element.shape if type(first_element) in [np.ndarray] else ()\n",
-    "\treturn tf.feature_column.numeric_column(feature, shape=shape)"
+    "\treturn tf.feature_column.numeric_column(feature, shape=first_element.shape)"
    ]
   },
   {
@@ -522,7 +526,7 @@
     "\t\t\t\tlogits -= tf.log(-tf.log(u))\n",
     "\t\t\treturn tf.argmax(logits, axis=1)\n",
     "\n",
-    "\t\tpredictions = { 'class_ids': sample(logits, random=False) }\n",
+    "\t\tpredictions = { 'class_ids': sample(logits, random=False), 'probabilities': tf.nn.softmax(logits) }\n",
     "\n",
     "\t\t# 1. Prediction mode\n",
     "\t\t# Return our prediction\n",
@@ -676,7 +680,8 @@
     "\ttrain_spec = tf.estimator.TrainSpec(input_fn=train_input_fn, max_steps=max_steps)\n",
     "\teval_spec = tf.estimator.EvalSpec(input_fn=test_input_fn, steps=EVALUATION_STEPS, start_delay_secs=0, throttle_secs=0)\n",
     "\n",
-    "\ttf.estimator.train_and_evaluate(estimator, train_spec, eval_spec)"
+    "\ttf.estimator.train_and_evaluate(estimator, train_spec, eval_spec)\n",
+    "\treturn estimator"
    ]
   },
   {
@@ -720,7 +725,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_cross_validate_model(datalist):\n",
+    "def cross_validate_model(config, feature_columns, n_classes):\n",
+    "\t# Perform k-fold cross-validation\n",
+    "\tfeature_set = set(f.key for f in feature_columns)\n",
+    "\tcross_validation = KFold(n_splits=config[\"N_SPLITS\"], shuffle=True, random_state=1)\n",
+    "\tfor e, (train_index, test_index) in enumerate(cross_validation.split(datalist)):\n",
+    "\t\tprint(f'-------- Fold {e} --------')\n",
+    "\t\tprint(f'Train-set {e} indexes {train_index}')\n",
+    "\t\tprint(f'Test-set {e} indexes {test_index}')\n",
+    "\t\t# Split training and test set\n",
+    "\t\ttrainlist = [datalist[u] for u in train_index]\n",
+    "\t\ttrainset = dictify_datalist(trainlist)\n",
+    "\t\ttrainset['x'] = {\n",
+    "\t\t\tk:v\n",
+    "\t\t\tfor k,v in trainset['x'].items()\n",
+    "\t\t\tif k in feature_set\n",
+    "\t\t}\n",
+    "\t\t# Re-sample training set (after sentences embedding)\n",
+    "\t\tresample_dataset(trainset, resampling_fn=config[\"RESAMPLING_FN\"])\n",
+    "\t\tprint(f'Train-set {e} distribution', Counter(trainset['y']))\n",
+    "\t\ttestlist = [datalist[u] for u in test_index]\n",
+    "\t\ttestset = dictify_datalist(testlist)\n",
+    "\t\tprint(f'Test-set {e} distribution', Counter(testset['y']))\n",
+    "\n",
+    "\t\t#config_str = '_'.join(f'{key}={value if not callable(value) else value.__name__}' for key,value in config.items())\n",
+    "\t\tmodel_dir = f'{MODEL_DIR}{e}'#'-{config_str}'\n",
+    "\t\testimator = train_and_evaluate(\n",
+    "\t\t\tconfig=config,\n",
+    "\t\t\ttrainset=trainset, \n",
+    "\t\t\ttestset=testset, \n",
+    "\t\t\tnum_epochs=TRAIN_EPOCHS, \n",
+    "\t\t\tbatch_size=config[\"BATCH_SIZE\"], \n",
+    "\t\t\tmax_steps=MAX_STEPS, \n",
+    "\t\t\tmodel_dir=model_dir, \n",
+    "\t\t\tfeature_columns=feature_columns, \n",
+    "\t\t\tn_classes=n_classes\n",
+    "\t\t)\n",
+    "        \n",
+    "\t\tdataset = dictify_datalist(datalist)\n",
+    "\t\tinput_fn = tf.estimator.inputs.numpy_input_fn(\n",
+    "\t\t\tx=dataset['x'],\n",
+    "\t\t\ty=dataset['y'],\n",
+    "\t\t\tshuffle=False,\n",
+    "\t\t)\n",
+    "\t\tdataset['x']['probabilities'] = list(map(lambda x: x['probabilities'], estimator.predict(input_fn)))\n",
+    "\t\txs,ys = zip(*listify_dataset(dataset))\n",
+    "\t\txs = [\n",
+    "\t\t\t{\n",
+    "\t\t\t\tk: v.tolist() if type(v) in [np.array,np.ndarray] else v\n",
+    "\t\t\t\tfor k,v in x\n",
+    "\t\t\t\tif k in ['anchorsent','probabilities']\n",
+    "\t\t\t}\n",
+    "\t\t\tfor x in xs\n",
+    "\t\t]\n",
+    "\t\twith open(os.path.join(model_dir,'prediction.json'),'w') as f:\n",
+    "\t\t\tjson.dump(xs, f, indent=4)\n",
+    "\t\tyield model_dir # iterator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define function for distributed cross-validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ray_cross_validation(datalist,feature_columns,n_classes):\n",
     "\tdef get_best_stat_dict(summary_results_list):\n",
     "\t\tbest_stat_dict = {}\n",
     "\t\tfor summary_results in summary_results_list:\n",
@@ -734,38 +810,10 @@
     "\t\tfor stat,best_list in best_stat_dict.items():\n",
     "\t\t\tbest_stat_dict[stat] = {'mean':np.mean(best_list), 'std':np.std(best_list)}\n",
     "\t\treturn best_stat_dict\n",
-    "\n",
-    "\tdef cross_validate_model(config, reporter):\n",
-    "\t\t# Perform k-fold cross-validation\n",
+    "            \n",
+    "\tdef ray_cross_validate_model(config, reporter):\n",
     "\t\tsummary_results_list = []\n",
-    "\t\tcross_validation = KFold(n_splits=config[\"N_SPLITS\"], shuffle=True, random_state=1)\n",
-    "\t\tfor e, (train_index, test_index) in enumerate(cross_validation.split(datalist)):\n",
-    "\t\t\tprint(f'-------- Fold {e} --------')\n",
-    "\t\t\tprint(f'Train-set {e} indexes {train_index}')\n",
-    "\t\t\tprint(f'Test-set {e} indexes {test_index}')\n",
-    "\t\t\t# Split training and test set\n",
-    "\t\t\ttrainlist = [datalist[u] for u in train_index]\n",
-    "\t\t\ttrainset = dictify_datalist(trainlist)\n",
-    "\t\t\t# Re-sample training set (after sentences embedding)\n",
-    "\t\t\tresample_dataset(trainset, resampling_fn=config[\"RESAMPLING_FN\"])\n",
-    "\t\t\tprint(f'Train-set {e} distribution', Counter(trainset['y']))\n",
-    "\t\t\ttestlist = [datalist[u] for u in test_index]\n",
-    "\t\t\ttestset = dictify_datalist(testlist)\n",
-    "\t\t\tprint(f'Test-set {e} distribution', Counter(testset['y']))\n",
-    "\n",
-    "\t\t\t#config_str = '_'.join(f'{key}={value if not callable(value) else value.__name__}' for key,value in config.items())\n",
-    "\t\t\tmodel_dir = f'{MODEL_DIR}{e}'#'-{config_str}'\n",
-    "\t\t\ttrain_and_evaluate(\n",
-    "\t\t\t\tconfig=config,\n",
-    "\t\t\t\ttrainset=trainset, \n",
-    "\t\t\t\ttestset=testset, \n",
-    "\t\t\t\tnum_epochs=TRAIN_EPOCHS, \n",
-    "\t\t\t\tbatch_size=config[\"BATCH_SIZE\"], \n",
-    "\t\t\t\tmax_steps=MAX_STEPS, \n",
-    "\t\t\t\tmodel_dir=model_dir, \n",
-    "\t\t\t\tfeature_columns=feature_columns, \n",
-    "\t\t\t\tn_classes=n_classes\n",
-    "\t\t\t)\n",
+    "\t\tfor e,model_dir in enumerate(cross_validate_model(config,feature_columns,n_classes)):\n",
     "\t\t\tsummary_results = get_summary_results(f'./{model_dir}/eval')\n",
     "\t\t\tsummary_results = summary_results[-1]['results']\n",
     "\t\t\tsummary_results_list.append(summary_results)\n",
@@ -796,7 +844,7 @@
     "\t\t\t\trecall_weighted_std=best_stat_dict[\"recall_weighted\"][\"std\"],\n",
     "\t\t\t)\n",
     "\t\t\tprint(f'Average best statistics at fold {e}: {best_stat_dict}')\n",
-    "\treturn cross_validate_model"
+    "\treturn ray_cross_validate_model"
    ]
   },
   {
@@ -860,7 +908,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_columns = [get_dataframe_feature_shape(trainset['x'],feature) for feature in trainset['x'].keys()]\n",
+    "feature_columns = [\n",
+    "    get_dataframe_feature_shape(trainset['x'],feature) \n",
+    "    for feature in trainset['x'].keys()\n",
+    "    if get_dataframe_feature_shape(trainset['x'],feature) is not None\n",
+    "    #and feature in ['aclarc_prediction','scicite_prediction']\n",
+    "]\n",
     "print(feature_columns)"
    ]
   },
@@ -924,7 +977,7 @@
     "experiment_name = 'hp_tuning'\n",
     "local_dir = os.path.join('.','ray_results')\n",
     "analysis = tune.run( # https://ray.readthedocs.io/en/latest/tune-package-ref.html#ray.tune.run\n",
-    "    build_cross_validate_model(datalist),\n",
+    "    ray_cross_validation(datalist,feature_columns,n_classes),\n",
     "    num_samples=1, # Number of times to sample from the hyperparameter space. Defaults to 1. If grid_search is provided as an argument, the grid will be repeated num_samples of times.\n",
     "    name=experiment_name,\n",
     "    local_dir=local_dir,\n",
