--- a/scar.ipynb
+++ b/scar.ipynb
@@ -132,9 +132,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "USE_SCICITE = True\n",
-    "USE_ACLARC = True\n",
-    "USE_PATTERN_EMBEDDING = True\n",
+    "USE_SCICITE = False\n",
+    "USE_ACLARC = False\n",
+    "USE_PATTERN_EMBEDDING = False\n",
     "USE_TEST_SET = False\n",
     "\n",
     "ZERO_CLASS = 'none'\n",
@@ -151,6 +151,7 @@
     "EVALUATION_PER_TRAINING = 30\n",
     "EVALUATION_STEPS = MAX_STEPS/EVALUATION_PER_TRAINING\n",
     "MODEL_DIR = './model'\n",
+    "DATA_DIR = './dataset'\n",
     "TF_MODEL = 'USE_MLQA'\n",
     "MODEL_OPTIONS = {'tf_model':TF_MODEL, 'use_lemma':False}"
    ]
@@ -860,7 +861,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainset = get_dataframe('training_all')"
+    "trainset = get_dataframe(os.path.join(DATA_DIR,'training_all'))"
    ]
   },
   {
@@ -876,7 +877,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "testset = get_dataframe('test_groundtruth_all')"
+    "testset = get_dataframe(os.path.join(DATA_DIR,'test_groundtruth_all'))"
    ]
   },
   {
